[package]
name = "doibak-server"
version = "0.1.0"
authors = ["71e6fd52 <71e6fd52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doibak_types = { version = "0.1.0", path = "../doibak_types" }

futures = "0.3.4"
anyhow = "1.0.40"
serde-lexpr = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.3", features = ["small_rng"] }

[dev-dependencies]
enum_macro = "0.3.1"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]
